Home and About updates1

--- a/index/index.html
+++ b/index/index.html
@@ -10,8 +10,8 @@
         <h1>ECH Computer Club</h1>
     
     <nav>
-    <a href="index.html">Home</a>  
-  <a href="about.html">About</a> 
+    <a href="/index/index.html">Home</a> 
+  <a href="/about/about.html">About</a> 
   <a href=#>Our Misson</a> 
   <a href=#>Members</a> 
   <a href=#>Contact</a>
@@ -24,6 +24,7 @@
       <img src="/img/image1.jpeg">
     <p class="Pic1">The students are in computer club beacuse they want to learn more about coding and the opportunities that coding and other things with computers can bring you. We take students out fro field trips to explore the world of coding.</p>
     
+        <h1>Dev</h1>
     </body>
   
   
