--- a/about/about.html
+++ b/about/about.html
@@ -10,8 +10,8 @@
         <h1>ECH Computer Club</h1>
     
     <nav>
-    <a href="index.html">Home</a>  
-  <a href="about.html">About</a> 
+    <a href="/index/index.html">Home</a>  
+  <a href="/about/about.html">About</a> 
   <a href=#>Our Misson</a> 
   <a href=#>Members</a> 
   <a href=#>Contact</a>
