Added more paragraph tags.

--- a/index/index.html
+++ b/index/index.html
@@ -24,7 +24,9 @@
       <img src="/img/image1.jpeg">
     <p class="Pic1">The students are in computer club beacuse they want to learn more about coding and the opportunities that coding and other things with computers can bring you. We take students out fro field trips to explore the world of coding.</p>
     
-        <h1>Dev</h1>
+        
+        <h1>Dev Catalyst Trip</h1>
+        <p>Some student that were in computer club went on a trip to California by winning a coding contest were they had to make a website for a client. Here is a video of the trip</p>
     </body>
   
   
