--- a/about/about.html
+++ b/about/about.html
@@ -12,8 +12,8 @@
     <nav>
     <a href="/index/index.html">Home</a>  
   <a href="/about/about.html">About</a> 
-  <a href=#>Our Misson</a> 
-  <a href=#>Members</a> 
+  <a href=>Our Misson</a> 
+  <a href="/members/mem.html">Members</a> 
   <a href=#>Contact</a>
 </nav>
         </header>
