--- a/index/index.html
+++ b/index/index.html
@@ -14,7 +14,7 @@
   <a href="/about/about.html">About</a> 
   <a href=#>Our Misson</a> 
   <a href=#>Members</a> 
-  <a href=#>Contact</a>
+  <a href=/contact/contact.html>Contact</a>
 </nav>
         </header>
       
