--- a/about/about.html
+++ b/about/about.html
@@ -13,7 +13,7 @@
     <a href="/index/index.html">Home</a>  
   <a href="/about/about.html">About</a> 
   <a href=#>Our Misson</a> 
-  <a href=#>Members</a> 
+  <a href="/members/mem.html">Members</a> 
   <a href="/contact/contact.html">Contact</a>
 </nav>
         </header>
