mad changes son

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,8 +11,8 @@
     <nav>
     <a href="/index/index.html">Home</a>  
   <a href="/about/about.html">About</a> 
-  <a href=#>Our Misson</a> 
-  <a href=#>Members</a> 
+  <a href=#>Interviews</a> 
+  <a href="/members/mem.html">Members</a> 
   <a href="/contact/contact.html">Contact</a>
 </nav>
         </header>
