--- a/about/about.html
+++ b/about/about.html
@@ -12,7 +12,7 @@
     <nav>
     <a href="/index/index.html">Home</a>  
   <a href="/about/about.html">About</a> 
-  <a href=#>Our Misson</a> 
+  <a href=#>Interviews</a> 
   <a href="/members/mem.html">Members</a> 
   <a href="/contact/contact.html">Contact</a>
 </nav>
