--- a/members/mem.html
+++ b/members/mem.html
@@ -14,9 +14,9 @@
     <nav>
     <a href="/index/index.html">Home</a> 
   <a href="/about/about.html">About</a> 
-  <a href=#>Our Misson</a> 
+  <a href=#>Interviews</a> 
   <a href="/members/mem.html">Members</a> 
-  <a href=#>Contact</a>
+  <a href="/contact/contact.html">Contact</a>
 </nav>
         </header>
         
