i do be coding tho

--- a/members/mem.html
+++ b/members/mem.html
@@ -14,7 +14,7 @@
     <nav>
     <a href="/index/index.html">Home</a> 
   <a href="/about/about.html">About</a> 
-  <a href=#>Interviews</a> 
+  <a href=#>Gallery</a> 
   <a href="/members/mem.html">Members</a> 
   <a href="/contact/contact.html">Contact</a>
 </nav>
@@ -155,7 +155,12 @@
 
 
 
+<footer>
+  <button id="myBtn"><a href="#top" >Top</a></button>
 
+
+    
+    </footer>
 
 
 
