--- a/index/index.html
+++ b/index/index.html
@@ -15,7 +15,7 @@
     <nav>
     <a href="/index/index.html">Home</a> 
   <a href="/about/about.html">About</a> 
-  <a href=#>Interviews</a> 
+  <a href=#>Gallery</a> 
   <a href="/members/mem.html">Members</a> 
   <a href=/contact/contact.html>Contact</a>
 </nav>
@@ -65,9 +65,9 @@
   
 
 <footer>
-   
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    
+  <button id="myBtn"><a href="#top" >Top</a></button>
+
+
     
     </footer>
 
